@@ -7,6 +7,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix down_on_error for the server. TRQ-1074
   b - prevent pbs_server from spinning in select due to sockets in CLOSE_WAIT.
       TRQ-1161.
+  e - Have pbs_server save the queues each time before exiting so that legacy 
+      formats are converted to xml after upgrading. TRQ-1120
 
 4.1.1
   e - pbs_server will now detect and release orphaned ALPS reservations
